# VNanoMsg

./: README.md  build.gradle  settings.gradle
VNanoMsg/: build.gradle  settings.gradle
VNanoMsg/app/: build.gradle
VNanoMsg/app/src/main/: AndroidManifest.xml
VNanoMsg/app/src/main/cpp/: native-lib.cpp
VNanoMsg/app/src/main/cpp/src/: survey.h
VNanoMsg/app/src/main/java/com/vaccae/vnanomsg/: BUSActivity.kt  MainActivity.kt  PAIRActivity.kt  PUBSUBActivity.kt  REQREPActivity.kt  SURVEYActivity.kt
VNanoMsg/app/src/main/java/com/vaccae/vnanomsg/utils/: NNBUS.kt  NNPAIR.kt  NNPUBSUB.kt  NNREQREP.kt  NNSURVEY.kt
VNanoMsg/app/src/main/res/layout/: activity_main.xml  activity_pair.xml  activity_pubsub.xml
VNanoMsg/gradle/wrapper/: gradle-wrapper.properties
VNanoMsg/src/androidTest/java/com/vaccae/vnanomsg/: ExampleInstrumentedTest.kt
VNanoMsg/src/main/: AndroidManifest.xml
VNanoMsg/src/main/cpp/: CMakeLists.txt  native-lib.cpp
VNanoMsg/src/main/cpp/src/: survey.h
VNanoMsg/src/main/cpp/utils/: utils.cpp  utils.h
VNanoMsg/src/main/java/com/vaccae/vnanomsg/: NNBUS.kt  NNBaseInf.kt  NNPAIR.kt  NNPIPEPULL.kt  NNPIPEPUSH.kt  NNPUBSUB.kt  NNREQREP.kt  NNSURVEY.kt
VNanoMsg/src/main/java/com/vaccae/vnanomsg/utils/: NanoMsgJNI.kt
VNanoMsg/src/main/res/values/: strings.xml
VNanoMsg/src/test/java/com/vaccae/vnanomsg/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/vaccae/nanomsg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vaccae/nanomsg/: BUSActivity.kt  MainActivity.kt  PAIRActivity.kt  PUBSUBActivity.kt  REQREPActivity.kt  SURVEYActivity.kt
app/src/main/java/com/vaccae/nanomsg/bean/: NanoTrans.kt  VaccaeShare.kt
app/src/main/java/com/vaccae/nanomsg/mvp/contract/: TransContract.kt
app/src/main/java/com/vaccae/nanomsg/mvp/model/: PipePullModel.kt  ReqRepModel.kt
app/src/main/java/com/vaccae/nanomsg/mvp/presenter/: PipePullPresenter.kt  ReqRepPresenter.kt
app/src/main/java/com/vaccae/nanomsg/mvp/view/: PipePullActivity.kt  REQREPActivity.kt
app/src/main/java/com/vaccae/nanomsg/mvvm/model/: PipePushModel.kt
app/src/main/java/com/vaccae/nanomsg/mvvm/view/: PipePushActivity.kt
app/src/main/java/com/vaccae/nanomsg/mvvm/viewmodel/: PipePushViewModel.kt
app/src/main/res/layout/: activity_bus.xml  activity_main.xml  activity_pair.xml  activity_pipepull.xml  activity_pipepush.xml  activity_pubsub.xml  activity_reqrep.xml  activity_survey.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vaccae/nanomsg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
